--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "vanilla-app-template",
+  "name": "valeria-danko-resume",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/vanilla-app-template/",
+    "build": "vite build --base=/valeria-danko-resume/",
     "preview": "vite preview"
   },
   "devDependencies": {
@@ -13,7 +13,6 @@
     "sass": "^1.63.6",
     "vite": "^4.0.5"
   },
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "vite-plugin-full-reload": "^1.0.5",
